--- a/src/views/home/home.css
+++ b/src/views/home/home.css
@@ -1,33 +1,8 @@
 /* 앨리스배움체 */
 @import url("https://font.elice.io/EliceDigitalCoding.css");
-
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  background-color: #e9efc0;
-  font-family: "Elice Digital Coding", "monospace";
-  color: #4a4a4a;
-  text-decoration: none;
-}
-
-/* header */
-nav {
-  height: 10vh;
-}
-nav ul {
-  height: 50px;
-  text-align: right;
-  padding: 10px;
-}
-nav ul li {
-  display: inline-block;
-}
-nav ul li:last-child {
-  margin-right: 0;
-}
-header {
-  height: 80px;
+body {
+  font-family: "Noto Sans KR", sans-serif;
+  font-weight: bold;
 }
 .pageTop {
   height: 100%;
@@ -96,20 +71,4 @@ header .subTitle {
 #slider .slide img {
   width: 100%;
   height: 100%;
-}
-
-/* footer */
-footer .footer {
-  font-size: small;
-  line-height: 200%;
-  /* height: 100px;
-  width: 100vw; */
-  padding: 0 0 0 10px;
-  background-color: #e9efc0;
-}
-
-.footer .companyName {
-  font-size: medium;
-  font-weight: bold;
-  line-height: 300%;
 }
