--- a/src/views/itemList/itemList.css
+++ b/src/views/itemList/itemList.css
@@ -1,12 +1,8 @@
 body {
-  font-family: 'Noto Sans KR', sans-serif;
+  font-family: "Noto Sans KR", sans-serif;
   font-weight: bold;
 }
-header {
-  background-color: gray;
-  width: 100vw;
-  height: 20vh;
-}
+
 .category_container {
   width: 100%;
   height: 10vh;
