--- a/src/views/security/security.html
+++ b/src/views/security/security.html
@@ -25,78 +25,90 @@
     <!-- 커스텀 css, js -->
     <link rel="stylesheet" href="security.css" />
     <script src="security.js" type="module" defer></script>
+    <link rel="stylesheet" href="../../header/header.css" />
+    <script src="../../header/header.js" type="module" defer></script>
     <!-- 다음 주소 api -->
     <script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
-
   </head>
   <body>
     <!-- 헤더 -->
-    <nav class="navbar" role="navigation" aria-label="main navigation">
-      <div class="container mt-3">
-        <div class="navbar-brand">
-          <a class="navbar-item" href="/">
-            <img src="/elice-rabbit.png" width="30" height="30" />
-            <span class="has-text-link">쇼핑-n팀</span>
-          </a>
-        </div>
+    <header>
+      <section id="headerNav">
+        <nav role="navigation" aria-label="main navigation">
+          <ul id="navbar" class="navbar"></ul>
+        </nav>
+      </section>
+    </header>
 
-          <div class="navbar-end breadcrumb my-auto" aria-label="breadcrumbs">
-            <ul id="navbar">
-              <li>
-                  <a href="/cart" aria-current="page">
-                      <span class="icon"><i class="fas fa-cart-shopping"></i></span>
-                      <span>장바구니</span>
-                  </a>
-              </li>
-              <li><a href="/mypage" id="mypageBtn">mypage</a></li>
-              <li><a id="logoutBtn">로그아웃</a></li>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </nav>
-    
     <section class="mypage-container">
       <h1 class="mypage">회원정보 관리</h1>
-        <div class="mypageInfo">
-          <form class="userInfo">
-            <div class="field">
-              <label class="label" for="nameInput">이름</label>
-              <input class="input" id="nameInput" type="text" >
+      <div class="mypageInfo">
+        <form class="userInfo">
+          <div class="field">
+            <label class="label" for="nameInput">이름</label>
+            <input class="input" id="nameInput" type="text" />
+          </div>
+          <div class="field">
+            <label class="label" for="passwordInput">비밀번호</label>
+            <input class="input" id="passwordInput" type="password" />
+          </div>
+          <div class="field">
+            <label class="label" for="passwordConfirmInput"
+              >비밀번호 확인</label
+            >
+            <input class="input" id="passwordConfirmInput" type="password" />
+          </div>
+          <div class="field">
+            <label class="label" for="postalNumber">주소</label>
+            <div class="addressInfo">
+              <input
+                type="text"
+                class="input"
+                id="postalNumber"
+                placeholder="우편번호"
+                readonly
+              />
+              <input type="button" id="findAddress" value="주소찾기" />
             </div>
-            <div class="field">
-              <label class="label" for="passwordInput">비밀번호</label>
-              <input class="input" id="passwordInput" type="password" >
-            </div>
-            <div class="field">
-              <label class="label" for="passwordConfirmInput">비밀번호 확인</label>
-              <input class="input" id="passwordConfirmInput" type="password" >
-            </div>
-            <div class="field">
-              <label class="label" for="postalNumber">주소</label>
-              <div class="addressInfo">
-                <input type="text" class="input" id="postalNumber" placeholder="우편번호" readonly>
-                <input type="button" id="findAddress" value="주소찾기">
-              </div>
-            </div>
-            <div class="field">
-              <input type="text" class="input" id="addInput1" placeholder="주소" readonly>
-            </div>
-            <div class="field">
-              <input type="text" class="input" id="addInput2" placeholder="상세주소">
-            </div>
-            <div class="field">
-              <label class="label" for="phonenumInput">전화번호</label>
-              <input class="input" id="phonenumInput" type="number" placeholder="-없이 입력해 주세요.">
-            </div>
-            <div class="field">
-              <label class="label" for="currentPassword">현재비밀번호</label>
-              <input class="input" id="currentPassword" type="password" placeholder="현재비밀번호 입력">
-            </div>
-          </form>
-        </div>
-        <button id="infoChangeBtn">수정완료</button>
-
+          </div>
+          <div class="field">
+            <input
+              type="text"
+              class="input"
+              id="addInput1"
+              placeholder="주소"
+              readonly
+            />
+          </div>
+          <div class="field">
+            <input
+              type="text"
+              class="input"
+              id="addInput2"
+              placeholder="상세주소"
+            />
+          </div>
+          <div class="field">
+            <label class="label" for="phonenumInput">전화번호</label>
+            <input
+              class="input"
+              id="phonenumInput"
+              type="number"
+              placeholder="-없이 입력해 주세요."
+            />
+          </div>
+          <div class="field">
+            <label class="label" for="currentPassword">현재비밀번호</label>
+            <input
+              class="input"
+              id="currentPassword"
+              type="password"
+              placeholder="현재비밀번호 입력"
+            />
+          </div>
+        </form>
+      </div>
+      <button id="infoChangeBtn">수정완료</button>
     </section>
   </body>
 </html>
