--- a/src/views/signout/signout.html
+++ b/src/views/signout/signout.html
@@ -25,38 +25,25 @@
     <!-- 커스텀 css, js -->
     <link rel="stylesheet" href="signout.css" />
     <script src="signout.js" type="module" defer></script>
+    <link rel="stylesheet" href="../../header/header.css" />
+    <script src="../../header/header.js" type="module" defer></script>
   </head>
   <body>
     <!-- 헤더 -->
-    <nav class="navbar" role="navigation" aria-label="main navigation">
-      <div class="container mt-3">
-        <div class="navbar-brand">
-          <a class="navbar-item" href="/">
-            <img src="/elice-rabbit.png" width="30" height="30" />
-            <span class="has-text-link">쇼핑-n팀</span>
-          </a>
-        </div>
-
-          <div class="navbar-end breadcrumb my-auto" aria-label="breadcrumbs">
-            <ul id="navbar">
-              <li>
-                  <a href="/cart" aria-current="page">
-                      <span class="icon"><i class="fas fa-cart-shopping"></i></span>
-                      <span>장바구니</span>
-                  </a>
-              </li>
-              <li><a href="/mypage" id="mypageBtn">mypage</a></li>
-              <li><a id="logoutBtn">로그아웃</a></li>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </nav>
+    <header>
+      <section id="headerNav">
+        <nav role="navigation" aria-label="main navigation">
+          <ul id="navbar" class="navbar"></ul>
+        </nav>
+      </section>
+    </header>
 
     <section id="signout-container" class="signout-container">
       <h2>계정삭제</h2>
-      <label for="passwordInput">계정삭제를 위한 현재 비밀번호를 입력해 주세요.</label>
-      <input type="password" id="passwordInput" placeholder="현재 비밀번호">
+      <label for="passwordInput"
+        >계정삭제를 위한 현재 비밀번호를 입력해 주세요.</label
+      >
+      <input type="password" id="passwordInput" placeholder="현재 비밀번호" />
       <button id="deleteBtn">삭제완료</button>
     </section>
   </body>
