주문정보 db 연동 완료

--- a/src/views/order/order.html
+++ b/src/views/order/order.html
@@ -81,8 +81,7 @@
             <div class="priceInfo"></div>
           </section>
         </section>
-        <button type="button" class="ordering" onclick="alert('주문이 완료되었습니다. 메인 페이지로 돌아갑니다.');
-        location.href = '../home/home.html'">주문하기</button>
+        <button type="button" class="ordering">주문하기</button>
       </div>
     </main>
      
