--- a/src/views/signout/signout.html
+++ b/src/views/signout/signout.html
@@ -23,6 +23,10 @@
       crossorigin="anonymous"
     ></script>
     <!-- 커스텀 css, js -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="signout.css" />
     <script src="signout.js" type="module" defer></script>
     <link rel="stylesheet" href="../../header/header.css" />
