--- a/src/views/order/order.css
+++ b/src/views/order/order.css
@@ -8,6 +8,18 @@
   text-decoration: none;
 }
 
+/*number 타입의 input에 수량조절 버튼 삭제*/
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
+}
+
 /* header */
 nav ul {
   height: 20px;
