--- a/src/views/order/order.css
+++ b/src/views/order/order.css
@@ -1,33 +1,3 @@
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  background-color: #E9EFC0;
-  font-family: 'Elice Digital Coding', 'monospace'; 
-  color: #4a4a4a;
-  text-decoration: none;
-}
-
-/* header */
-nav ul {
-  height: 20px;
-  text-align: right;
-  padding: 10px;
-}
-nav ul li {
-  display: inline-block;
-}
-nav ul li:last-child {
-  margin-right: 0;
-}
-.pageTop h2 {
-  font-size: 35px;
-  padding-left: 20px;
-  padding-top: 10px;
-  font-weight: bolder;
-  color: #4E944F;
-}
-
 /* main */
 .orderTitle {
   font-size: 30px;
@@ -51,7 +21,7 @@ nav ul li:last-child {
   min-height: auto;
   padding: 20px;
   margin: 50px 50px 50px 0;
-  border: 2px solid #B4E197;
+  border: 2px solid #b4e197;
   line-height: 40px;
   float: right;
 }
@@ -70,11 +40,11 @@ footer .footer {
   font-size: small;
   line-height: 200%;
   padding: 0 0 10px 20px;
-  background-color: #E9EFC0;
+  background-color: #e9efc0;
 }
 
 .footer .companyName {
   font-size: medium;
   font-weight: bold;
-  line-height: 300%
+  line-height: 300%;
 }
