--- a/src/views/order/order.html
+++ b/src/views/order/order.html
@@ -23,32 +23,26 @@
       crossorigin="anonymous"
     ></script>
     <!-- 커스텀 css, js -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="order.css" />
     <script src="order.js" type="module" defer></script>
+    <link rel="stylesheet" href="../header/header.css" />
+    <script src="../header/header.js" type="module" defer></script>
     <!-- 다음 주소 api -->
     <script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
   </head>
   <body>
-    <!-- 헤더 -->      
-    <nav role="navigation" aria-label="main navigation">
-      <ul>
-        <li><a href="/login">로그인</a></li>
-        <li><a href="/register">회원가입</a></li>
-        <li><a href="/itemList">shop</a></li>
-        <li>
-          <a href="/cart" aria-current="page">
-            <span class="icon">
-              <i class="fas fa-cart-shopping"></i>
-            </span><span>장바구니</span>
-          </a>
-        </li>
-      </ul>
-    </nav>
-    <div class="pageTop">
-        <a href="/" class="brand">
-          <h2>먹짱</h2>
-        </a>
-    </div>
+    <!-- 헤더 -->
+    <header>
+      <section id="headerNav">
+        <nav role="navigation" aria-label="main navigation">
+          <ul id="navbar" class="navbar"></ul>
+        </nav>
+      </section>
+    </header>
     <!--메인-->
     <main role="main">
       <section class="orderTitle">
@@ -59,11 +53,16 @@
           <form class="userInfo">
             <div class="field">
               <label class="label" for="nameInput">이름</label>
-              <input class="input" id="nameInput" type="text">
+              <input class="input" id="nameInput" type="text" />
             </div>
             <div class="field">
               <label class="label" for="phonenumInput">전화번호</label>
-              <input class="input" id="phonenumInput" type="number" placeholder="-없이 입력해 주세요">
+              <input
+                class="input"
+                id="phonenumInput"
+                type="number"
+                placeholder="-없이 입력해 주세요"
+              />
             </div>
             <!-- <div class="field">
               <label class="label" for="zipCodeInput">우편번호</label>
@@ -116,14 +115,5 @@
         <button type="button" class="ordering">주문하기</button>
       </div>
     </main>
-     
-    <!-- footer -->
-    <footer>
-      <div class="footer">
-        <p class="companyName">(주)사팀</p>
-        <p>사업자 등록번호: 000-00-00000 | 통신판매업 신고번호: 제0000-0000-00000호 | 대표: 이준서</p>
-        <p>주소: 서울시 강남구 테헤란로 53길 16 B1 데마코홀 | 이메일: team4@elice.io | 고객센터: 1588-0000</p>
-      </div>
-    </footer>
   </body>
 </html>
