--- a/src/views/orderlist/orderlist.html
+++ b/src/views/orderlist/orderlist.html
@@ -45,7 +45,15 @@
     <section class="orderlistpage-container">
       <div class="orderlistpageInfo">
         <h1 class="orderlistpage">주문조회</h1>
-        <div class="orderlist"></div>
+        <div id="orderlist-container" class="orderlist-container">
+          <div class="orderlist-standard">
+            <span>날짜</span>
+            <span>주문정보</span>
+            <span>상태</span>
+            <span>신청</span>
+          </div>
+          <!-- <div id="orderInfo"></div> -->
+        </div>
       </div>
     </section>
   </body>
