작은 오류 수정

--- a/src/views/mypage/mypage.html
+++ b/src/views/mypage/mypage.html
@@ -56,6 +56,7 @@
         <a href="/mypage/security">정보수정</a>
         <a href="/mypage/signout">계정삭제</a>
         <a href="/mypage/orderlist">주문조회</a>
+        <a href="/adminPage">관리자</a>
       </div>
     </section>
   </body>
