--- a/src/views/header/header.css
+++ b/src/views/header/header.css
@@ -15,7 +15,7 @@ header {
 
 .navbar {
   background-color: #e9efc0;
-  /* display: flex; */
+  display: flex;
   justify-content: right;
   flex-wrap: wrap;
   gap: 30px;
