--- a/src/views/order/order.html
+++ b/src/views/order/order.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>먹짱-결제</title>
+    <title>먹짱ㅣ결제</title>
     <!-- 아이콘 -->
     <link
       rel="icon"
@@ -22,6 +22,8 @@
       src="https://kit.fontawesome.com/7630448495.js"
       crossorigin="anonymous"
     ></script>
+    <!-- noto sans 폰트 -->
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700&display=swap" rel="stylesheet">
     <!-- 커스텀 css, js -->
     <link rel="stylesheet" href="order.css" />
     <script src="order.js" type="module" defer></script>
@@ -54,6 +56,7 @@
       <section class="orderTitle">
         <div>배송 정보</div>
       </section>
+      <!-- <button type="button" class="getMyAdd">+ 기본 배송지 불러오기</button> -->
       <div class="orderContainer">
         <section class="shippingInfo">
           <form class="userInfo">
@@ -65,18 +68,6 @@
               <label class="label" for="phonenumInput">전화번호</label>
               <input class="input" id="phonenumInput" type="number" placeholder="-없이 입력해 주세요">
             </div>
-            <!-- <div class="field">
-              <label class="label" for="zipCodeInput">우편번호</label>
-              <input class="input" id="zipCodeInput" type="number">
-            </div>
-            <div class="field">
-              <label class="label" for="addInput">주소</label>
-              <input class="input" id="addInput" type="text">
-            </div>
-            <div class="field">
-              <label class="label" for="detailedAddInput">상세주소</label>
-              <input class="input" id="detailedAddInput" type="text" placeholder="동, 호수까지 정확하게 입력해 주세요">
-            </div> -->
             <div class="field">
               <label class="label" for="postalNumber">주소</label>
               <div class="addressInfo">
@@ -116,14 +107,5 @@
         <button type="button" class="ordering">주문하기</button>
       </div>
     </main>
-     
-    <!-- footer -->
-    <footer>
-      <div class="footer">
-        <p class="companyName">(주)사팀</p>
-        <p>사업자 등록번호: 000-00-00000 | 통신판매업 신고번호: 제0000-0000-00000호 | 대표: 이준서</p>
-        <p>주소: 서울시 강남구 테헤란로 53길 16 B1 데마코홀 | 이메일: team4@elice.io | 고객센터: 1588-0000</p>
-      </div>
-    </footer>
   </body>
 </html>
