--- a/src/views/home/home.html
+++ b/src/views/home/home.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>먹거리 장터 먹짱</title>
+    <title>먹짱 | 홈</title>
     <!-- 아이콘 -->
     <link rel="icon" type="image/png" sizes="30x30" href="./images/icon.png" />
     <!-- bulma css -->
