--- a/src/views/cart/cart.html
+++ b/src/views/cart/cart.html
@@ -59,7 +59,7 @@
         <div class="cartTitle">장바구니🛒</div>
         <div class="cartInfoContainer">
           <section class="cartList" id="cartList">
-            <div>
+            <div class="deleteButtons">
               <button type="button" class="deleteSom">선택 삭제</button>
               <button type="button" class="deleteAll">전체 삭제</button>
             </div>
