--- a/src/views/home/home.html
+++ b/src/views/home/home.html
@@ -65,3 +65,4 @@
     </section>
   </body>
 </html>
+Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis delectus vel sint maxime, amet fugit quaerat doloribus saepe necessitatibus at architecto iste fuga, numquam nemo nulla temporibus, adipisci cumque. Expedita.
