mypage, 정보관리, 삭제 등 css 수정

--- a/src/views/home/home.html
+++ b/src/views/home/home.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>먹짱 | 홈</title>
     <!-- 아이콘 -->
-    <link rel="icon" type="image/png" sizes="30x30" href="./images/icon.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/파비콘1.png" />
     <!-- bulma css -->
     <link
       rel="stylesheet"
