--- a/src/views/login/login.html
+++ b/src/views/login/login.html
@@ -5,13 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>쇼핑-데모</title>
     <!-- 아이콘 -->
-    <link rel="icon" type="image/png" sizes="16x16" href="/elice-rabbit-favicon.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/파비콘1.png" />
     <!-- bulma css 관련 -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css"
+    />
     <!-- 폰트 어썸: 아이콘 -->
-    <script defer src="https://kit.fontawesome.com/7630448495.js" crossorigin="anonymous"></script>
+    <script
+      defer
+      src="https://kit.fontawesome.com/7630448495.js"
+      crossorigin="anonymous"
+    ></script>
     <!-- 커스텀 css, js -->
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700&display=swap" rel="stylesheet" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="login.css" />
     <script src="login.js" type="module" defer></script>
     <link rel="stylesheet" href="../header/header.css" />
@@ -34,18 +44,32 @@
         <div class="field">
           <label class="label" for="emailInput">이메일</label>
           <div class="control">
-            <input class="input" id="emailInput" type="email" placeholder="abc@example.com" autocomplete="on" />
+            <input
+              class="input"
+              id="emailInput"
+              type="email"
+              placeholder="abc@example.com"
+              autocomplete="on"
+            />
           </div>
         </div>
 
         <div class="field mb-5">
           <label class="label" for="passwordInput">비밀번호</label>
           <div class="control">
-            <input class="input" id="passwordInput" type="password" placeholder="********" autocomplete="on" />
+            <input
+              class="input"
+              id="passwordInput"
+              type="password"
+              placeholder="********"
+              autocomplete="on"
+            />
           </div>
         </div>
 
-        <button class="button is-info is-fullwidth" id="submitButton">로그인하기</button>
+        <button class="button is-info is-fullwidth" id="submitButton">
+          로그인하기
+        </button>
       </form>
     </div>
   </body>
