--- a/src/views/header/header.html
+++ b/src/views/header/header.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>먹거리 장터 먹짱</title>
     <!-- 아이콘 -->
-    <link rel="icon" type="image/png" sizes="30x30" href="./images/icon.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/파비콘1.png" />
     <!-- bulma css -->
     <link
       rel="stylesheet"
@@ -29,7 +29,7 @@
   <body>
     <header>
       <section id="headerNav" class="headerNav">
-        <nav role="navigation" aria-label="main navigation">
+        <nav role="navigation" aria-label="main navigation" class="navbarBox">
           <ul id="navbar" class="navbar"></ul>
         </nav>
         <div class="pageTop">
