--- a/src/views/itemInfo/itemInfo.html
+++ b/src/views/itemInfo/itemInfo.html
@@ -5,12 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>먹짱ㅣ상품 상세 페이지</title>
     <!-- 아이콘 -->
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="16x16"
-      href="/elice-rabbit-favicon.png"
-    />
+    <link rel="icon" type="image/png" sizes="16x16" href="/파비콘1.png" />
     <!-- bulma css -->
     <link
       rel="stylesheet"
@@ -23,7 +18,10 @@
       crossorigin="anonymous"
     ></script>
     <!-- 커스텀 css, js -->
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700&display=swap" rel="stylesheet" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="itemInfo.css" />
     <script src="itemInfo.js" type="module"></script>
     <script src="quantityControlBox.js" type="module"></script>
