--- a/src/views/orderlist/orderlist.html
+++ b/src/views/orderlist/orderlist.html
@@ -5,12 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>쇼핑-n팀</title>
     <!-- 아이콘 -->
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="16x16"
-      href="/elice-rabbit-favicon.png"
-    />
+    <link rel="icon" type="image/png" sizes="16x16" href="/파비콘1.png" />
     <!-- bulma css -->
     <link
       rel="stylesheet"
@@ -46,13 +41,14 @@
       <div class="orderlistpageInfo">
         <h1 class="orderlistpage">주문조회</h1>
         <div id="orderlist-container" class="orderlist-container">
-          <div class="orderlist-standard">
+          <div class="orderlist-standard orderlist-info">
             <span>날짜</span>
             <span>주문정보</span>
+            <span>수량</span>
+            <span>가격</span>
             <span>상태</span>
             <span>신청</span>
           </div>
-          <!-- <div id="orderInfo"></div> -->
         </div>
       </div>
     </section>
