--- a/src/views/signout/signout.css
+++ b/src/views/signout/signout.css
@@ -2,9 +2,38 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  /* justify-content: center; */
+  height: 100vh;
+}
+.signoutpageInfo {
+  display: flex;
+  flex-direction: column;
   justify-content: center;
-  height: 500px;
-  width: 400px;
-  border: 1px solid #4e944f;
-  margin: 0 auto;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 10px;
+  padding: 30px;
+  width: 500px;
+  border: 1px solid #ddd;
+  border-radius: 15px;
+}
+.sigoutpage {
+  font-size: 30px;
+  font-weight: 600;
+  padding: 30px 0;
+}
+.signoutCondition {
+  color: #363636;
+  font-size: 1rem;
+  font-weight: 700;
+}
+
+.deleteBtn {
+  cursor: pointer;
+  border: none;
+  border-radius: 10px;
+  font-size: 16px;
+  width: 150px;
+  margin-top: 10px;
+  padding: 10px;
 }
