--- a/src/views/signout/signout.html
+++ b/src/views/signout/signout.html
@@ -5,12 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>쇼핑-n팀</title>
     <!-- 아이콘 -->
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="16x16"
-      href="/elice-rabbit-favicon.png"
-    />
+    <link rel="icon" type="image/png" sizes="16x16" href="/파비콘1.png" />
     <!-- bulma css -->
     <link
       rel="stylesheet"
@@ -43,12 +38,19 @@
     </header>
 
     <section id="signout-container" class="signout-container">
-      <h2>계정삭제</h2>
-      <label for="passwordInput"
-        >계정삭제를 위한 현재 비밀번호를 입력해 주세요.</label
-      >
-      <input type="password" id="passwordInput" placeholder="현재 비밀번호" />
-      <button id="deleteBtn">삭제완료</button>
+      <h2 class="sigoutpage">계정삭제</h2>
+      <div class="signoutpageInfo">
+        <label for="passwordInput" class="signoutCondition"
+          >계정삭제를 위한 현재 비밀번호를 입력해 주세요.</label
+        >
+        <input
+          type="password"
+          id="passwordInput"
+          placeholder="현재 비밀번호"
+          class="input"
+        />
+        <button id="deleteBtn" class="deleteBtn">삭제완료</button>
+      </div>
     </section>
   </body>
 </html>
