로그인 회원가입 css 수정

--- a/src/views/register/register.html
+++ b/src/views/register/register.html
@@ -43,8 +43,8 @@
 
     <!-- 회원가입 폼(Form) -->
     <div class="register-user-form-container">
+      <p class="registerpage">환영합니다!</p>
       <form class="box register-user-form-box" id="registerUserForm">
-        <p class="title is-5 has-text-primary">환영합니다!</p>
         <div class="field">
           <label class="label" for="fullNameInput">이름</label>
           <div class="control">
@@ -52,7 +52,7 @@
               class="input"
               id="fullNameInput"
               type="text"
-              placeholder="유재석"
+              placeholder="이름"
               autocomplete="on"
             />
           </div>
