--- a/src/views/login/login.css
+++ b/src/views/login/login.css
@@ -1,12 +1,23 @@
+body {
+  font-family: "Noto Sans KR", sans-serif;
+  font-weight: bold;
+}
 .login-form-container {
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 85vh;
+  height: 60vh;
 }
-
+.loginpage {
+  font-size: 30px;
+  font-weight: 600;
+  padding: 30px 0;
+}
 .login-form-box {
   width: 30rem;
+  border: 1px solid #ddd;
+  border-radius: 15px;
 }
 
 .login-form-box .title {
@@ -15,4 +26,10 @@
 
 .login-form-box .button {
   font-weight: bold;
+}
+.button.is-info.is-fullwidth {
+  background-color: #83bd75;
+}
+.button.is-info.is-fullwidth:hover {
+  background-color: #4e944f;
 }
