--- a/src/views/login/login.html
+++ b/src/views/login/login.html
@@ -39,8 +39,8 @@
 
     <!-- 로그인 폼(Form) -->
     <div class="login-form-container">
+      <h1 class="loginpage">어서오세요!</h1>
       <form class="box login-form-box" id="loginForm">
-        <p class="title is-5 has-text-info">어서오세요!</p>
         <div class="field">
           <label class="label" for="emailInput">이메일</label>
           <div class="control">
