--- a/src/views/register/register.css
+++ b/src/views/register/register.css
@@ -1,12 +1,25 @@
+body {
+  font-family: "Noto Sans KR", sans-serif;
+  font-weight: bold;
+}
+
 .register-user-form-container {
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 85vh;
+  height: 80vh;
+}
+.registerpage {
+  font-size: 30px;
+  font-weight: 600;
+  padding: 30px 0;
 }
 
 .register-user-form-box {
   width: 30rem;
+  border: 1px solid #ddd;
+  border-radius: 15px;
 }
 
 .register-user-form-box .title {
@@ -17,7 +30,13 @@
   font-weight: bold;
 }
 
-.register-user-form-box .input:focus {
-  border-color: #00d1b2;
+/* .register-user-form-box .input:focus {
+  border-color: #e9efc0;
   box-shadow: 0 0 0 0.125em rgba(0, 209, 178, 0.25);
+} */
+.button.is-primary.is-fullwidth {
+  background-color: #83bd75;
+}
+.button.is-primary.is-fullwidth:hover {
+  background-color: #4e944f;
 }
