--- a/src/views/security/security.html
+++ b/src/views/security/security.html
@@ -105,7 +105,7 @@
             <label class="label" for="currentPassword">현재비밀번호</label>
             <input
               class="input"
-              id="curivrentPassword"
+              id="currentPassword"
               type="password"
               placeholder="현재비밀번호 입력"
             />
