어드민 페이지 가격 부분 숫자만 입력하게 수정

--- a/src/views/adminPage/adminPage.css
+++ b/src/views/adminPage/adminPage.css
@@ -1,7 +1,7 @@
 body {
   margin: 0;
   max-width: 96%;
-  font-family: 'Noto Sans KR', sans-serif;
+  font-family: "Noto Sans KR", sans-serif;
 }
 
 .adminPage_nav {
@@ -58,7 +58,7 @@ body {
 
 .menu_container .button {
   font-weight: 500;
-  font-family: 'Noto Sans KR', sans-serif;
+  font-family: "Noto Sans KR", sans-serif;
   color: #9b9b9b;
 }
 
@@ -106,4 +106,9 @@ body {
   display: flex;
   flex-direction: row;
   gap: 2%;
+}
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
 }
