--- a/src/views/orderComplete/orderComplete.html
+++ b/src/views/orderComplete/orderComplete.html
@@ -23,6 +23,12 @@
       rel="stylesheet"
     />
     <!-- 커스텀 css, js -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Bungee+Shade&display=swap"
+      rel="stylesheet"
+    />
     <link
       href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700&display=swap"
       rel="stylesheet"
@@ -37,7 +43,7 @@
     <!-- 헤더 -->
     <header>
       <section id="headerNav">
-        <nav role="navigation" aria-label="main navigation">
+        <nav role="navigation" aria-label="main navigation" class="navbarBox">
           <ul id="navbar" class="navbar"></ul>
         </nav>
       </section>
@@ -45,7 +51,9 @@
     <!--메인-->
     <main role="main">
       <section class="complete">
-        <p class="completeMessage">주문이 완료되었습니다. 배송은 영업일 기준 2~7일 소요 예정입니다.</p>
+        <p class="completeMessage">
+          주문이 완료되었습니다. 배송은 영업일 기준 2~7일 소요 예정입니다.
+        </p>
         <button type="button" class="orderList">주문 조회</button>
       </section>
     </main>
