--- a/src/views/header/header.css
+++ b/src/views/header/header.css
@@ -8,9 +8,13 @@ header {
 
 .headerNav {
   display: flex;
-  flex-wrap: wrap;
-  gap: 10px;
   flex-direction: column;
+}
+.navbarBox {
+  height: 80px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .navbar {
@@ -25,7 +29,13 @@ header {
 
 .mainlogo {
   position: absolute;
+  top: 10px;
   left: 20px;
+}
+.logoStyle {
+  font-size: 24px;
+  font-family: "Bungee Shade", cursive;
+  color: #4e944f;
 }
 
 .pageTop {
