--- a/src/views/mypage/mypage.html
+++ b/src/views/mypage/mypage.html
@@ -18,6 +18,12 @@
       crossorigin="anonymous"
     ></script>
     <!-- 커스텀 css, js -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Bungee+Shade&display=swap"
+      rel="stylesheet"
+    />
     <link
       href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700&display=swap"
       rel="stylesheet"
@@ -30,8 +36,8 @@
   <body>
     <!-- 헤더 -->
     <header>
-      <section id="headerNav">
-        <nav role="navigation" aria-label="main navigation">
+      <section id="headerNav" class="headerNav">
+        <nav role="navigation" aria-label="main navigation" class="navbarBox">
           <ul id="navbar" class="navbar"></ul>
         </nav>
       </section>
