정보수정할 때 수정 비밀번호 검사 개선

--- a/src/views/header/header.css
+++ b/src/views/header/header.css
@@ -37,6 +37,10 @@ header {
   font-family: "Bungee Shade", cursive;
   color: #4e944f;
 }
+.logoTitle {
+  font-family: "Bungee Shade", cursive;
+  color: #4e944f;
+}
 
 .pageTop {
   height: 100%;
@@ -74,4 +78,7 @@ header .subTitle {
 }
 .catebtn:hover {
   color: black;
+}
+.category {
+  margin-left: 30px;
 }
