--- a/src/views/header/header.html
+++ b/src/views/header/header.html
@@ -39,7 +39,7 @@
         </nav>
         <div class="pageTop">
           <a href="/" class="brand">
-            <img src="../elice-rabbit.png" />
+            <span class="logoTitle">m</span>
             <span id="title"><span class="subTitle">먹거리장터</span>먹짱</span>
           </a>
         </div>
