--- a/src/views/register/register.html
+++ b/src/views/register/register.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>쇼핑-데모</title>
+    <title>먹짱 | 회원가입</title>
     <!-- 아이콘 -->
     <link rel="icon" type="image/png" sizes="16x16" href="/파비콘1.png" />
     <!-- bulma css 관련 -->
