--- a/src/views/signout/signout.html
+++ b/src/views/signout/signout.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>쇼핑-n팀</title>
+    <title>먹짱 | 계정삭제</title>
     <!-- 아이콘 -->
     <link rel="icon" type="image/png" sizes="16x16" href="/파비콘1.png" />
     <!-- bulma css -->
