해더 마무리 작업

--- a/src/views/itemList/itemList.html
+++ b/src/views/itemList/itemList.html
@@ -45,7 +45,7 @@
             <span id="title"><span class="subTitle">먹거리장터</span>먹짱</span>
           </a>
         </div>
-        <div class="category">
+        <div class="Category">
           <button id="category1" class="catebtn">도매</button>
           <button id="category2" class="catebtn">소매</button>
         </div>
