--- a/src/views/header/header.css
+++ b/src/views/header/header.css
@@ -9,9 +9,10 @@ header {
 .headerNav {
   display: flex;
   flex-direction: column;
+  max-width: 1200px;
+  margin: 0 auto;
 }
 .navbarBox {
-  height: 80px;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -30,7 +31,7 @@ header {
 .mainlogo {
   position: absolute;
   top: 10px;
-  left: 20px;
+  left: 30px;
 }
 .logoStyle {
   font-size: 24px;
@@ -66,19 +67,26 @@ header .subTitle {
   font-size: 30px;
 }
 
+.Category {
+  margin-bottom: 10px;
+  display: flex;
+  justify-content: flex-start;
+  flex-wrap: wrap;
+  gap: 10px;
+}
 .catebtn {
-  padding: 10px;
+  padding: 0 10px;
   border: none;
   background: none;
   cursor: pointer;
   font-family: "Noto Sans KR", sans-serif;
   font-weight: bold;
-  font-size: 20px;
+  font-size: 30px;
   color: #4e944f;
 }
 .catebtn:hover {
-  color: black;
-}
-.category {
-  margin-left: 30px;
+  color: #e9efc0;
+  background-color: #83bd75;
+  border-radius: 10px;
+  box-sizing: border-box;
 }
