--- a/src/views/orderlist/orderlist.html
+++ b/src/views/orderlist/orderlist.html
@@ -36,7 +36,7 @@
   <body>
     <!-- 헤더 -->
     <header>
-      <section id="headerNav">
+      <section id="headerNav" class="headerNav">
         <nav role="navigation" aria-label="main navigation" class="navbarBox">
           <ul id="navbar" class="navbar"></ul>
         </nav>
