배너 클릭 시 카테고리로 이동

--- a/src/views/home/home.html
+++ b/src/views/home/home.html
@@ -57,8 +57,8 @@
       <section class="slider">
         <button class="imgBtn left"><i class="fas fa-chevron-left fa-2x" aria-hidden="true"></i></button>
         <ul class="slides">
-          <li class="slide"><a href="#"><img class="img" src="../배너1.PNG"></a></li>
-          <li class="slide"><a href="#"><img class="img" src="../배너2.PNG"></a></li>
+          <li class="slide"><img class="img" id="categoryBig" src="../배너1.PNG"></li>
+          <li class="slide"><img class="img" id="categorySmall" src="../배너2.PNG"></li>
         </ul>
         <button class="imgBtn right"><i class="fas fa-chevron-right fa-2x" aria-hidden="true"></i></button>   
       </section>
