--- a/src/views/home/home.html
+++ b/src/views/home/home.html
@@ -32,10 +32,7 @@
             <span class="logoTitle">m</span>
           </a>
         </div>
-        <div class="Category">
-          <button id="category1" class="catebtn">도매</button>
-          <button id="category2" class="catebtn">소매</button>
-        </div>
+        <div class="Category"></div>
       </section>
     </header>
     <!--메인-->
