--- a/src/views/header/header.css
+++ b/src/views/header/header.css
@@ -1,8 +1,8 @@
-@import url("https://font.elice.io/EliceDigitalCoding.css");
+@import url('https://font.elice.io/EliceDigitalCoding.css');
 
 header {
   background-color: #e9efc0;
-  font-family: "Noto Sans KR", sans-serif;
+  font-family: 'Noto Sans KR', sans-serif;
   font-weight: bold;
 }
 
@@ -41,11 +41,11 @@ header {
 }
 .logoStyle {
   font-size: 24px;
-  font-family: "Bungee Shade", cursive;
+  font-family: 'Bungee Shade', cursive;
   color: #4e944f;
 }
 .logoTitle {
-  font-family: "Bungee Shade", cursive;
+  font-family: 'Bungee Shade', cursive;
   color: #4e944f;
   font-size: 60px;
 }
@@ -86,7 +86,7 @@ header .subTitle {
   border: none;
   background: none;
   cursor: pointer;
-  font-family: "Noto Sans KR", sans-serif;
+  font-family: 'Noto Sans KR', sans-serif;
   font-weight: bold;
   font-size: 30px;
   color: #4e944f;
