메인배너 CSS 작업

--- a/src/views/home/home.html
+++ b/src/views/home/home.html
@@ -38,8 +38,14 @@
     <!--메인-->
     <main role="main" class="main">
       <section class="mainBanner">
-        <img class="img big" id="categoryBig" src="../배너1.PNG" />
-        <img class="img small" id="categorySmall" src="../배너2.PNG" />
+        <div class="imgContainer">
+          <img class="img whole" id="wholeBack" src="../도매_배경.PNG" />
+          <img class="img whole" id="wholePeople" src="../도매_인물.PNG" />
+        </div>
+        <div class="imgContainer">
+          <img class="img retail" id="retailBack" src="../소매_배경.PNG" />
+          <img class="img retail" id="retailPeople" src="../소매_인물.PNG" />
+        </div>
       </section>
     </main>
   </body>
