--- a/src/views/home/home.css
+++ b/src/views/home/home.css
@@ -33,16 +33,38 @@ header .subTitle {
   width: 100vw;
   align-items: stretch;
 }
-.big {
+.whole {
   flex-basis: 50%;
 }
-.small {
+.retail {
   flex-basis: 50%;
+}
+.imgContainer {
+  overflow: hidden;
+  position: relative;
 }
 .img {
   width: 50vw;
   height: 85vh;
 }
+#wholePeople, 
+#retailPeople {
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  /* display: none; */
+  opacity: 0;
+  transition: all 1s;
+}
 .img:hover {
   cursor: pointer;
+}
+.imgContainer:hover #wholePeople,
+.imgContainer:hover #retailPeople {
+  /* display: block; */
+  opacity: 100%;
+}
+.imgContainer:hover #wholeBack,
+.imgContainer:hover #retailBack {
+  transform: scale(1.02);
 }
