--- a/src/views/cart/cart.html
+++ b/src/views/cart/cart.html
@@ -63,8 +63,8 @@
         <div class="cartInfoContainer">
           <section class="cartList" id="cartList">
             <div class="deleteButtons">
-              <button type="button" class="deleteSom">선택 삭제</button>
-              <button type="button" class="deleteAll">전체 삭제</button>
+              <button type="button" class="deleteSom button is-success" style="background-color: #b4e197; color: black;">선택 삭제</button>
+              <button type="button" class="deleteAll button is-success" style="background-color: #b4e197; color: black;">전체 삭제</button>
             </div>
             <div id="cartContainer"></div>
           </section>
@@ -72,7 +72,7 @@
             <div class="payInfo">
               <div class="payInfoTitle">결제정보</div>
             </div>
-            <button type="button" id="ordering">주문하기</button>
+            <button type="button" class="button is-success" id="ordering">주문하기</button>
           </section>
         </div>
       </section>
