--- a/src/views/cart/cart.css
+++ b/src/views/cart/cart.css
@@ -24,6 +24,7 @@
 .cartList {
   padding: 35px;
   border: 2px solid #b4e197;
+  border-radius: 5px / 5px;
   margin-left: 20px;
   flex-basis: 70vw;
 }
@@ -62,12 +63,14 @@
   display: flex;
   flex-direction: column;
   flex-basis: 25vw;
+  gap: 10px;
 }
 
 .payInfo {
   min-height: auto;
   padding: 20px;
   border: 2px solid #b4e197;
+  border-radius: 5px / 5px;
   line-height: 40px;
 }
 .payInfoTitle {
@@ -78,7 +81,6 @@
   background-color: #4e944f;
   border: none;
   color: white;
-  padding: 15px 32px;
   text-align: center;
   text-decoration: none;
   display: inline-block;
@@ -88,7 +90,7 @@
   display: flex;
   flex-direction: row;
   justify-content: space-around;
-  align-items: stretch;
+  align-items: center;
   padding: 10px;
 }
 .item .itemInfo:nth-child(1) {
@@ -97,24 +99,20 @@
 .item .itemInfo:nth-child(2) {
   flex-basis: 10%;
 }
-.item .itemInfo:nth-child(3) {
-  flex-basis: 10%;
-}
 .item .itemInfo:nth-child(4) {
   flex-basis: 25%;
-  font-weight: 300;
-  font-size: 25px;
+  text-align: center;
 }
 .item .itemInfo:nth-child(5) {
   flex-basis: 20%;
 }
 
 .item a img {
-  max-width: 70px;
-  max-height: 70px;
+  max-width: 80px;
 }
 .item a .title {
-  font-size: 1em;
+  font-size: 17px;
+  font-weight: 400;
 }
 .itemInfo_btn_updown {
   display: flex;
