주문완료 페이지 CSS

--- a/src/views/orderComplete/orderComplete.html
+++ b/src/views/orderComplete/orderComplete.html
@@ -52,9 +52,10 @@
     <main role="main">
       <section class="complete">
         <p class="completeMessage">
+          🥳<br>
           주문이 완료되었습니다. 배송은 영업일 기준 2~7일 소요 예정입니다.
         </p>
-        <button type="button" class="orderList">주문 조회</button>
+        <button type="button" class="orderList button is-success" style="background-color: #b4e197; color: black;">주문 조회</button>
       </section>
     </main>
   </body>
