--- a/src/views/itemInfo/itemInfo.css
+++ b/src/views/itemInfo/itemInfo.css
@@ -75,4 +75,11 @@
 .itemInfo_cartBuy_Btn .buyCart {
   width: 49%;
   font-weight: 700;
+  background-color: #4e944f !important; 
+  color: white !important;
+}
+#itemInfo_cart {
+  border-color: #4e944f !important; 
+  background-color: white !important;
+  color: #4e944f !important;
 }
