--- a/src/views/cart/cart.html
+++ b/src/views/cart/cart.html
@@ -63,8 +63,8 @@
         <div class="cartInfoContainer">
           <section class="cartList" id="cartList">
             <div class="deleteButtons">
-              <button type="button" class="button is-success" id="deleteSom" style="background-color: #b4e197; color: black;">선택 삭제</button>
-              <button type="button" class="button is-success" id="deleteAll" style="background-color: #b4e197; color: black;">전체 삭제</button>
+              <button type="button" class="button is-success" id="deleteSom" >선택 삭제</button>
+              <button type="button" class="button is-success" id="deleteAll">전체 삭제</button>
             </div>
             <div id="cartContainer"></div>
           </section>
