--- a/src/views/mypage/mypage.html
+++ b/src/views/mypage/mypage.html
@@ -7,27 +7,14 @@
     <!-- 아이콘 -->
     <link rel="icon" type="image/png" sizes="16x16" href="/파비콘1.png" />
     <!-- bulma css -->
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css"
-    />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css" />
     <!-- 폰트 어썸: 아이콘 -->
-    <script
-      defer
-      src="https://kit.fontawesome.com/7630448495.js"
-      crossorigin="anonymous"
-    ></script>
+    <script defer src="https://kit.fontawesome.com/7630448495.js" crossorigin="anonymous"></script>
     <!-- 커스텀 css, js -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Bungee+Shade&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700&display=swap"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Bungee+Shade&display=swap" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="mypage.css" />
     <script src="mypage.js" type="module" defer></script>
     <link rel="stylesheet" href="../header/header.css" />
@@ -48,10 +35,10 @@
         <h1 class="mypage">마이페이지</h1>
         <div class="mypageInfo">
           <div class="userInfo">
-            <span id="userName"></span>
-            <span id="userEmail"></span>
-            <span id="userAdd"></span>
-            <span id="userPhonenum"></span>
+            <span class="title is-6 mypage_Info" id="userName"></span>
+            <span class="title is-6 mypage_Info" id="userEmail"></span>
+            <span class="title is-6 mypage_Info" id="userAdd"></span>
+            <span class="title is-6 mypage_Info" id="userPhonenum"></span>
           </div>
         </div>
         <div id="mypageNav" class="mypageNav">
