메인페이지 배너 비율 수정

--- a/src/views/home/home.css
+++ b/src/views/home/home.css
@@ -42,10 +42,11 @@ header .subTitle {
 .imgContainer {
   overflow: hidden;
   position: relative;
+  height: 85vh;
 }
 .img {
   width: 50vw;
-  height: 85vh;
+  height: 100%;
 }
 #wholePeople, 
 #retailPeople {
